--- a/fazemos.html
+++ b/fazemos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>chaminéAmiga</title>
+    <link rel="icon" href="imagens/Logosemfundo.png" type="image/png">
     <style>
         body {
             background-color:#FFF8E7;
@@ -19,20 +20,20 @@
  <ul>
   <li>
     <a href="index.html">
-      <img src="imagens/Logopetsemfundo.png" alt="Logotipo da página com uma chaminé abraçando um garoto" width="190">
+      <img class="logo" src="imagens/Logopetsemfundo.png" alt="Logotipo da página com uma chaminé abraçando um garoto" width="190">
     </a>
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
      <a class="link" href="index.html"> 
-       <h2 class="faq">Home</h2>
+       <h2 class="faq">Ínicio</h2>
      </a>
     </div>
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="sobre.html">
         <h2 class="faq">Sobre nós</h2>
       </a>
@@ -40,7 +41,7 @@
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="fazemos.html">
         <h2 class="faq">O que fazemos</h2>
       </a>
@@ -48,7 +49,7 @@
   </li>
 
     <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="f-a-q.html">
         <h2 class="faq">FAQ</h2>
       </a>
@@ -56,7 +57,7 @@
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="contato.html">
         <h2 class="faq">Fale conosco</h2>
       </a>
@@ -67,11 +68,11 @@
 </header>
 
 
-<div>
 
  <h1 class=titulo1> O que fazemos?</h1>
- <p class="texto4">Nós, do site chaminéAmiga, temos como objetivo dar mais visibilidade para organizações não governamentais (ONGs) da cidade de Paulista. Dito isso, detectamos uma falha na comunicação por meios de mídias virtuais com a população devido, à falta de investimentos por parte dos orgãos públicos em relação a algumas cidades como Recife e Olinda, que estão muito à frente em soluções digitais. </p>
-</div>
+ <div class="texto4card">
+  <p class="texto4">Nós, do site chaminéAmiga, temos como objetivo dar mais visibilidade para organizações não governamentais (ONGs) da cidade de Paulista. Dito isso, detectamos uma falha na comunicação por meios de mídias virtuais com a população devido, à falta de investimentos por parte dos orgãos públicos em relação a algumas cidades como Recife e Olinda, que estão muito à frente em soluções digitais. </p>
+ </div>
 
 
 
