--- a/f-a-q.html
+++ b/f-a-q.html
@@ -3,8 +3,7 @@
 <head>        
 <meta charset="UTF-8">
 <title> Perguntas Frenquentimente Respondidas</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="icon" href="imagens/Logosemfundo.png" type="image/png">
 
 
 <link rel="stylesheet"  href="style.css">
@@ -14,26 +13,26 @@
 
 <body>
 
-<!--TENTEI FAZER COM QUE O BOOTSTRAP N ENTRASSE EM CONFLITO COM O CSS-->  
+
     <header>
- <nav class="anti-bug"> 
+ <nav> 
  <ul>
   <li>
     <a href="index.html">
-      <img src="imagens/Logosemfundo.png" alt="Logotipo da página com uma chaminé abraçando um garoto" width="190">
+      <img class="logo" src="imagens/Logosemfundo.png" alt="Logotipo da página com uma chaminé abraçando um garoto" width="190">
     </a>
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
      <a class="link" href="index.html"> 
-       <h2 class="faq">Home</h2>
+       <h2 class="faq">Ínicio</h2>
      </a>
     </div>
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="sobre.html">
         <h2 class="faq">Sobre nós</h2>
       </a>
@@ -41,7 +40,7 @@
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="fazemos.html">
         <h2 class="faq">O que fazemos</h2>
       </a>
@@ -49,7 +48,7 @@
   </li>
 
     <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="f-a-q.html">
         <h2 class="faq">FAQ</h2>
       </a>
@@ -57,7 +56,7 @@
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="contato.html">
         <h2 class="faq">Fale conosco</h2>
       </a>
@@ -71,81 +70,43 @@
 <h1 class="titulo1" > Perguntas Frequentemente Respondidas </h1>
 
 
-
-
-<script 
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" >
-</script>
-
-
 <div class="container-faq">
 
   <img class="personafaq" src="imagens/faqpersonagem.png">
 
-<div class="accordion" id="accordionPerguntas">
+<div class="accordion-custom">
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        O que é ser um voluntário?
-      </button>
-    </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionPerguntas">
-      <div class="accordion-body">
-        O voluntariado ou trabalho voluntário é regulamentado pela Lei 9.608/1998 e, basicamente, consiste em uma atividade não remunerada, que visa atender um objetivo específico em prol de instituição pública ou privada.
-      </div>
+    <button class="accordion-header">O que é ser um voluntário?</button>
+    <div class="accordion-content">
+      <p>O voluntariado ou trabalho voluntário é regulamentado pela Lei 9.608/1998 e, basicamente, consiste em uma atividade não remunerada, que visa atender um objetivo específico em prol de instituição pública ou privada.</p>
     </div>
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Quanto o site chaminéAmiga ganha divulgando essas ONGs?
-      </button>
-    </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionPerguntas">
-      <div class="accordion-body">
-        Não ganhamos nenhum valor monetário com a divulgação das organizações. Apenas, queremos contribuir com a iniciativa, expondo-as para mais pessoas. Reunindo informações e facilitando a conexão  entre doadores e projetos.
-      </div>
+    <button class="accordion-header">Quanto o site chaminéAmiga ganha divulgando essas ONGs?</button>
+    <div class="accordion-content">
+      <p>Não ganhamos nenhum valor monetário com a divulgação das organizações. Apenas, queremos contribuir com a iniciativa, expondo-as para mais pessoas. Reunindo informações e facilitando a conexão entre doadores e projetos.</p>
     </div>
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Por que apenas ONGs de Paulista?
-      </button>
-    </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionPerguntas">
-      <div class="accordion-body">
-        Nós, notamos que, Paulista está atrás de Recife e Olinda em tecnologia para comunicação com moradores. Enquanto isso, Recife e Olinda investem em soluções digitais, a cidade de Paulista enfrenta limites orçamentários e estruturais que dificultam a modernização.
-
-      </div>
+    <button class="accordion-header">Por que apenas ONGs de Paulista?</button>
+    <div class="accordion-content">
+      <p>Nós notamos que Paulista está atrás de Recife e Olinda em tecnologia para comunicação com moradores. Enquanto isso, Recife e Olinda investem em soluções digitais, a cidade de Paulista enfrenta limites orçamentários e estruturais que dificultam a modernização.</p>
     </div>
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingFour">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-        Qual é o parâmetro para a divulgação?
-      </button>
-    </h2>
-    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionPerguntas">
-      <div class="accordion-body">
-        Divulgamos as ONGs com base nas informações disponíveis em seus perfis públicos nas redes sociais. Não mantemos vínculo formal com nenhuma das organizações apresentadas em nosso site.
-      </div>
+    <button class="accordion-header">Qual é o parâmetro para a divulgação?</button>
+    <div class="accordion-content">
+      <p>Divulgamos as ONGs com base nas informações disponíveis em seus perfis públicos nas redes sociais. Não mantemos vínculo formal com nenhuma das organizações apresentadas em nosso site.</p>
     </div>
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingFive">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-        Por que uma chaminé como mascote do site?
-      </button>
-    </h2>
-    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionPerguntas">
-      <div class="accordion-body">
-       As chaminés, marcadas no imaginário popular pela poluição, ganham novo sentido ao serem ressignificadas como símbolos da memória industrial e do desenvolvimento histórico de Paulista.
-      </div>
+    <button class="accordion-header">Por que uma chaminé como mascote do site?</button>
+    <div class="accordion-content">
+      <p>As chaminés, marcadas no imaginário popular pela poluição, ganham novo sentido ao serem ressignificadas como símbolos da memória industrial e do desenvolvimento histórico de Paulista.</p>
     </div>
   </div>
 </div>
@@ -161,6 +122,24 @@
     <div>
 
 </footer>
+
+
+<script>
+  document.querySelectorAll(".accordion-header").forEach(button => {
+    button.addEventListener("click", () => {
+      const item = button.parentElement;
+      const isActive = item.classList.contains("active");
+
+
+      document.querySelectorAll(".accordion-item").forEach(i => i.classList.remove("active"));
+
+
+      if (!isActive) {
+        item.classList.add("active");
+      }
+    });
+  });
+</script>
 
 
 </body>
