--- a/sobre.html
+++ b/sobre.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>chaminéAmiga</title>
+    <link rel="icon" href="imagens/Logosemfundo.png" type="image/png">
     <style>
         body {
             background-color:#FFF8E7;
@@ -19,20 +20,20 @@
  <ul>
   <li>
     <a href="index.html">
-      <img src="imagens/Logomeninasemfundo.png" alt="Logotipo da página com uma chaminé abraçando um garoto" width="190">
+      <img class="logo" src="imagens/Logomeninasemfundo.png" alt="Logotipo da página com uma chaminé abraçando um garoto" width="190">
     </a>
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
      <a class="link" href="index.html"> 
-       <h2 class="faq">Home</h2>
+       <h2 class="faq">Ínicio</h2>
      </a>
     </div>
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="sobre.html">
         <h2 class="faq">Sobre nós</h2>
       </a>
@@ -40,7 +41,7 @@
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="fazemos.html">
         <h2 class="faq">O que fazemos</h2>
       </a>
@@ -48,7 +49,7 @@
   </li>
 
     <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="f-a-q.html">
         <h2 class="faq">FAQ</h2>
       </a>
@@ -56,7 +57,7 @@
   </li>
 
   <li>
-    <div class="barra">
+    <div class="linha-hover">
       <a class="link" href="contato.html">
         <h2 class="faq">Fale conosco</h2>
       </a>
