Modificações visuais e adição de conteúdo.
Foi adicionado um iframe do google maps, e também a página "sobre" está sendo reestruturada.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </header>
 
   <div class="container-texto">
-    <h2 class="titulo">A Cidade de Paulista-PE</h2>
+    <h2 class="titulo">A Cidade de Paulista</h2>
     <p class="fontetexto">
       Paulista, em Pernambuco, é uma cidade litorânea de belezas naturais marcantes e de um povo acolhedor e vibrante.
       Apesar de seu charme e potencial turístico, enfrenta sérios problemas sociais, como desigualdade, falta de acesso a serviços básicos e violência.
@@ -76,7 +76,14 @@
     </p>
   </div>
 
+ 
 
+    <div class="card-mapa">
+      <div class="header-mapa">📍Localização Paulista-PE</div>
+      <div class="container-mapa">     
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63229.69580569407!2d-34.96672686293496!3d-7.910109015023187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab14232b0c2683%3A0xf71ceec9e9ecebef!2sPaulista%20-%20PE!5e0!3m2!1spt-BR!2sbr!4v1759105056673!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     </div>
+    </div>
 
   <div>
     <h2 class="ongsfaq">O que são ONGS?</h2>
@@ -230,7 +237,7 @@
 
   <!-- Projeto Criança da Igreja Menonita -->
   <div>
-    <h2 class="titulo1">Projeto Criança da Igreja Menonita</h2>
+    <h2 class="titulo1">Projeto Criança da Igreja Menonita (site em reforma)</h2>
     <div class="ong-card">
       <h3 class="texto2">
         As pessoas interessadas em ajudar no trabalho do Projeto Criança da Igreja Menonita além de fornecer doações monetárias e trabalhos voluntários, podem apadrinhar.
