--- a/sobre.html
+++ b/sobre.html
@@ -76,6 +76,13 @@
   <p class="historia">Este site foi idealizado e fundado por Ícaro Matheus, de forma independente em 7 de julho de 2025, com o objetivo de promover iniciativas autônomas da cidade de Paulista e inserir sua população no ambiente digital.</p>
 </div>
 
+ <h1 class="titulo1"> Sobre o Site</h1>
+
+<div class="container-sobre2">
+<img class="sobrefoto" src="imagens/computador.png">
+  <p class="historia">Esta página começou apenas como um projeto para o curso de Análise e Desenvolvimento de Sistemas. Mas, com o passar do tempo, percebemos que ela também poderia ter um propósito social e gerar um valor maior do que imaginávamos no início. Assim, o site é atualizado regurlamente. </p>
+</div>
+
 <footer class="footer">
   <div class="footer-container">
     
@@ -85,6 +92,7 @@
       <p>Paulista-PE</p>  
     <div>
 
+      
 </footer>
 
 
